cvNXP/.metadata/.plugins/org.eclipse.cdt.ui/LPC55S69_Project.build.log
10:27:19 **** Incremental Build of configuration Debug for project LPC55S69_Project ****
make -r -j4 all 
Building file: ../source/LPC55S69_Project.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DCPU_LPC55S69JBD100 -DCPU_LPC55S69JBD100_cm33 -DCPU_LPC55S69JBD100_cm33_core0 -DFSL_RTOS_BM -DSDK_OS_BAREMETAL -DSDK_DEBUGCONSOLE=1 -DCR_INTEGER_PRINTF -DPRINTF_FLOAT_ENABLE=0 -D__MCUXPRESSO -D__USE_CMSIS -DDEBUG -I"C:\Temp\MPC-MKS\LPC55S69_Project\board" -I"C:\Temp\MPC-MKS\LPC55S69_Project\source" -I"C:\Temp\MPC-MKS\LPC55S69_Project" -I"C:\Temp\MPC-MKS\LPC55S69_Project\drivers" -I"C:\Temp\MPC-MKS\LPC55S69_Project\CMSIS" -I"C:\Temp\MPC-MKS\LPC55S69_Project\device" -I"C:\Temp\MPC-MKS\LPC55S69_Project\utilities" -I"C:\Temp\MPC-MKS\LPC55S69_Project\component\uart" -I"C:\Temp\MPC-MKS\LPC55S69_Project\component\serial_manager" -I"C:\Temp\MPC-MKS\LPC55S69_Project\component\lists" -I"C:\Temp\MPC-MKS\LPC55S69_Project\board\boards" -I"C:\Temp\MPC-MKS\LPC55S69_Project\startup" -O0 -fno-common -g3 -Wall -c -ffunction-sections -fdata-sections -ffreestanding -fno-builtin -fmerge-constants -fmacro-prefix-map="../source/"= -mcpu=cortex-m33 -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -D__REDLIB__ -fstack-usage -specs=redlib.specs -MMD -MP -MF"source/LPC55S69_Project.d" -MT"source/LPC55S69_Project.o" -MT"source/LPC55S69_Project.d" -o "source/LPC55S69_Project.o" "../source/LPC55S69_Project.c"
../source/LPC55S69_Project.c: In function 'main':
../source/LPC55S69_Project.c:52:6: warning: value computed is not used [-Wunused-value]
   52 |  DWT1-DWT->CYCCNT;
      |  ~~~~^~~~~~~~~~~~
../source/LPC55S69_Project.c:53:2: error: 'status' undeclared (first use in this function); did you mean 'status_t'?
   53 |  status=("Hello World\n");
      |  ^~~~~~
      |  status_t
../source/LPC55S69_Project.c:53:2: note: each undeclared identifier is reported only once for each function it appears in
make[1]: *** [source/subdir.mk:23: source/LPC55S69_Project.o] Error 1
make: *** [makefile:45: all] Error 2
"make -r -j4 all" terminated with exit code 2. Build might be incomplete.

10:27:20 Build Failed. 3 errors, 1 warnings. (took 320ms)

